<resources>
    <string name="app_name">Test1</string>
    <string name="login">Login</string>
    <string name="enter_the_username">Enter the Username</string>
    <string name="enter_the_password">Enter the Password</string>
    <string name="hint_passwd">Password</string>
    <string name="hint_usern">Username</string>
    <string name="welcome">Welcome %s</string>
    <string name="re_enter_the_password">Re enter the Password</string>
    <string name="enter_the_name">Enter the Name</string>
    <string name="delete_account">Delete Account</string>
    <string name="ip_override_username">IP_OVERRIDE</string>
    <string name="ip_override_password">IP_OVERRIDE</string>
</resources>
